Add a to images

--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ body{
     display: flex;
     flex-direction: column;
 }
+a{
+    text-decoration: none;
+}
 .wrapper img{
     width: 100%;
     border-radius: 10px;
